frontend/tests/regression/good/interface-simple-05.gr
-- a function with an interface constraint
simple : forall (a : Type) (Simple a) . a -> a
simple x = x
