frontend/tests/regression/illtyped/badPoly.gr
diag : forall (a : Type, b : Type) . a |âˆ| -> (a, b)
diag |x| = (x, x)
